                    
                    Changes in afex Version 0.19-0
                    Released xxx 2017
    Significant User Visible Changes and New Features
    
    o   afex now works with emmeans (predecessor of lsmeans pckage).
    
    Bugfixes

    o   lsmeans did not work with mixed objects if type=2 and method used nested
        model comparions (e.g., LRT or PB).



                    *************************
                    ** afex VERSION 0.18-x **
                    *************************
                    
                    Changes in afex Version 0.18-0
                    Released May 2017
        
    Bugfixes

    o   aov_ez did not work with more than one covariate 
    (https://github.com/singmann/afex/issues/29).



                    *************************
                    ** afex VERSION 0.17-x **
                    *************************
                    
                    Changes in afex Version 0.17-x
                    Released April 2017

    Significant User Visible Changes and New Features

    o   Added Satterthwaite approximation (method="S") to mixed(), which is 
        implemented via lmerTest. Satterthwaite approximates the degrees-of-
        freedom of an F-test, similar to the default Kenward-Roger method, but
        requires less RAM.
    
    o   mixed() methods "KR" and "S" are now obtained via tests on the full 
        model directly. No restricted models are calculated for these methods. 
        The former KR method is still available: method="nested-KR"
    
    o   mixed() now per default exports and uses lmerTest::lmer and not 
        lme4::lmer(). This can be changed via calling 
        afex_options(lmer_function = "lme4")
        
    o   afex does not depend on reshape2 any more. It is only imported.
        
    o   All arguments with "." in the name have been renamed to use "_". The old
        names have been deprecated (i.e., still work, but should not be used).